Reduce formal tone

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <div class="container">
         <header>
             <h1>Willkommen!</h1>
-            <p>Wählen Sie, wie Sie lernen oder spielen möchten:</p>
+            <p>Wähle, wie du lernen oder spielen möchtest:</p>
         </header>
 
         <div class="button-container">
