--- a/index.html
+++ b/index.html
@@ -169,6 +169,41 @@
                 font-size: 2em;
             }
         }
+
+        /* Confetti styles */
+        #confetti-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none; /* Allows clicks to pass through */
+            overflow: hidden;
+            z-index: 999;
+        }
+
+        .confetti-piece {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: var(--confetti-color); /* Will be set via JS */
+            opacity: 0;
+            animation: confetti-fall 3s ease-out forwards;
+        }
+
+        @keyframes confetti-fall {
+            0% {
+                transform: translateY(-100px) rotateZ(0deg);
+                opacity: 0;
+            }
+            10% {
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) rotateZ(720deg);
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body>
@@ -179,15 +214,47 @@
         </header>
 
         <div class="button-container">
-            <a href="cards.html" class="choice-button study-button">
+            <a href="#" onclick="triggerConfettiTo('cards.html')" class="choice-button study-button">
                 <i class="fas fa-book-open"></i>
                 <span>Alleine lernen (Aufgabenkarten)</span>
             </a>
-            <a href="qlash.html" class="choice-button quiz-button">
+            <a href="#" onclick="triggerConfettiTo('qlash.html')" class="choice-button quiz-button">
                 <i class="fas fa-gamepad"></i>
                 <span>Wissen testen (Multiplayer Quiz)</span>
             </a>
         </div>
     </div>
+    <div id="confetti-container"></div>
+    <script>
+        // Function to trigger confetti animation
+        function triggerConfettiTo(url) {
+            const confettiContainer = document.getElementById('confetti-container');
+            if (!confettiContainer) {
+                console.warn("Confetti-Container nicht gefunden.");
+                return;
+            }
+
+            const colors = ['#f44336', '#e91e63', '#9c27b0', '#673ab7', '#3f51b5', '#2196f3', '#03a9f4', '#00bcd4', '#009688', '#4CAF50', '#8bc34a', '#cddc39', '#ffeb3b', '#ffc107', '#ff9800', '#ff5722'];
+            const numConfetti = 50; // Number of confetti pieces
+
+            for (let i = 0; i < numConfetti; i++) {
+                const piece = document.createElement('div');
+                piece.className = 'confetti-piece';
+                piece.style.left = `${Math.random() * 100}vw`; // Random horizontal position
+                piece.style.top = `${-20 - Math.random() * 100}px`; // Start above viewport
+                piece.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+                piece.style.animationDelay = `${Math.random() * 0.5}s`; // Stagger animation
+                piece.style.animationDuration = `${2 + Math.random() * 2}s`; // Random duration
+
+                confettiContainer.appendChild(piece);
+
+                // Remove the piece after its animation ends
+                piece.addEventListener('animationend', () => {
+                    piece.remove();
+                });
+            }
+            setTimeout( function() { window.location = url }, 1250 );
+        }
+    </script>
 </body>
 </html>
