[Security] fix policy.

--- a/qlash.html
+++ b/qlash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co; img-src 'self' data:; font-src 'self'; frame-ancestors 'none'; base-uri 'self'; form-action 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co; img-src 'self' data:; font-src 'self'; base-uri 'self'; form-action 'self';">
     <meta name="referrer" content="no-referrer">
     <title>Multiplayer Quiz</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -19,7 +19,7 @@
         </header>
 
         <div id="role-selection" class="view active card">
-            <h2>WÃ¤hlen deine Rolle</h2>
+            <h2>Wähle deine Rolle</h2>
             <button id="host-btn" class="btn">Quiz hosten</button>
             <button id="player-btn" class="btn">Quiz beitreten</button>
         </div>
