--- a/cards.html
+++ b/cards.html
@@ -68,7 +68,7 @@
             <div class="study-mode-controls">
                 <select id="study-mode" class="study-mode-select">
                     <option value="spaced-repetition">Spaced Repetition</option>
-                    <option value="new-first">Neue Karten zuerst</option>
+                    <option value="incorrect-first">Falsche zuerst</option>
                     <option value="incorrect-only">Nur falsche wiederholen</option>
                 </select>
             </div>
