[UI] show better visualization of MC results.

--- a/cards.html
+++ b/cards.html
@@ -119,6 +119,11 @@
                             <div class="question" id="question-back">Frage erscheint hier</div>
                             <div class="source-deck" id="source-deck-display"></div>
 
+                            <!-- Multiple choice options container (for back side with feedback) -->
+                            <div id="options-container-back" class="options-container hidden">
+                                <!-- Color-coded options will be cloned here -->
+                            </div>
+
                             <!-- Text answer display -->
                             <div id="user-answer-container" class="hidden">
                                 <div class="user-answer-display">
