[Fix] character encoding issue.

--- a/qlash.html
+++ b/qlash.html
@@ -56,14 +56,14 @@
                         <input type="checkbox" class="correct-checkbox">
                         <label>Richtig</label>
                     </div>
-                    <button type="button" id="add-option-btn" class="btn">Option hinzufÃ¼gen</button>
-                    <button type="submit" class="btn">Frage hinzufÃ¼gen</button>
+                    <button type="button" id="add-option-btn" class="btn">Option hinzufügen</button>
+                    <button type="submit" class="btn">Frage hinzufügen</button>
                 </form>
 
                 <div id="questions-list">
-                    <h3>HinzugefÃ¼gte Fragen:</h3>
+                    <h3>Hinzugefügte Fragen:</h3>
                     <div id="questions-container">
-                        <p>Noch keine Fragen hinzugefÃ¼gt</p>
+                        <p>Noch keine Fragen hinzugefügt</p>
                     </div>
                 </div>
             </div>
@@ -90,12 +90,12 @@
                     <h4>Aktuelle Rangliste (Top 10)</h4>
                     <ol id="scoreboard-list"></ol>
                 </div>
-                <button id="show-next-btn" class="btn hidden">NÃ¤chste Frage</button>
+                <button id="show-next-btn" class="btn hidden">Nächste Frage</button>
                 <button id="show-results-btn" class="btn hidden">Endergebnisse anzeigen</button>
             </div>
 
             <div id="host-results" class="view card hidden">
-                <h3>EndgÃ¼ltige Rangliste</h3>
+                <h3>Endgültige Rangliste</h3>
                 <div id="leaderboard"></div>
                 <button id="new-quiz-btn" class="btn">Neues Quiz hosten</button>
             </div>
@@ -130,7 +130,7 @@
             <div id="player-result" class="hidden">
                 <div id="result-display"></div>
                 <div class="score-display">Deine Punktzahl: <span id="player-score">0</span></div>
-                <p id="waiting-for-next">Warten auf nÃ¤chste Frage...</p>
+                <p id="waiting-for-next">Warten auf nächste Frage...</p>
             </div>
 
             <div id="player-final-result" class="view card hidden">
