[UI] fix and improve the confetti rain animation.

--- a/cards.html
+++ b/cards.html
@@ -180,6 +180,9 @@
         </div>
     </div>
 
+    <!-- Confetti Container -->
+    <div id="confetti-container"></div>
+
     <!-- External Dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <!-- Main Application Script -->
