--- a/cards.html
+++ b/cards.html
@@ -21,7 +21,7 @@
         <div class="header">
             <div class="header-content">
                 <h1 id="app-title">Lernkarten App</h1>
-                <p id="app-subtitle">Lade eine JSON-Datei oder ein ZIP Archiv von JSON-Dateien hoch - oder wähle ein gespeichertes Deck</p>
+                <p id="app-subtitle">Lade eine JSON-Datei oder ein ZIP-Archiv hoch - oder wähle ein gespeichertes Deck</p>
             </div>
             <select id="study-mode" class="study-mode-select">
                 <option value="spaced-repetition">Spaced Repetition</option>
@@ -33,12 +33,8 @@
         <div id="file-input-container">
             <div class="upload-options">
                 <div class="upload-option">
-                    <label for="file-input" id="upload-label">JSON hochladen</label>
-                    <input type="file" id="file-input" accept=".json">
-                </div>
-                <div class="upload-option">
-                    <label for="zip-input" id="zip-upload-label">oder ZIP hochladen</label>
-                    <input type="file" id="zip-input" accept=".zip">
+                    <label for="file-input" id="upload-label">JSON oder ZIP hochladen</label>
+                    <input type="file" id="file-input" accept=".json,.zip">
                 </div>
             </div>
             <p><span class="json-toggle" onclick="toggleJsonSample()">JSON-Format Beispiel anzeigen</span></p>
