[Fix] JSON code example formatting.

--- a/cards.html
+++ b/cards.html
@@ -38,8 +38,7 @@
                 </div>
             </div>
             <p><span class="json-toggle" onclick="toggleJsonSample()">JSON-Format Beispiel anzeigen</span></p>
-            <div id="sample-json" class="hidden">
-                {
+            <div id="sample-json" class="hidden"><pre><code>{
   "cards": [
     {
       "question": "Was ist die Hauptstadt von Deutschland?",
@@ -63,9 +62,8 @@
       }
     }
   ]
-}
+}</code></pre>
             </div>
-
             <div id="saved-decks-container">
                 <h3>Gespeicherte Decks</h3>
                 <div class="deck-search-container">
