--- a/cards.html
+++ b/cards.html
@@ -14,7 +14,9 @@
     
     <title>Lernkarten App</title>
     <script src="sanitize.js"></script>
+    <link rel="stylesheet" href="theme.css">
     <link rel="stylesheet" href="cards.css">
+    <script src="theme.js"></script>
 </head>
 <body>
     <div class="container">
