--- a/datenschutz.html
+++ b/datenschutz.html
@@ -3,8 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="theme-color" content="#3498db">
   <title>Datenschutz & Datenbank</title>
+  <link rel="stylesheet" href="theme.css">
   <link rel="stylesheet" href="qlash.css">
+  <script src="theme.js"></script>
+  <style>
+    body {
+      padding: 20px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+    h1, h2 {
+      color: var(--qlash-primary);
+    }
+    ul {
+      color: var(--text-primary);
+    }
+    .schema img {
+      border-radius: 8px;
+      box-shadow: var(--card-shadow);
+    }
+  </style>
 </head>
 <body>
 
