--- a/qlash.html
+++ b/qlash.html
@@ -9,7 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="sanitize.js"></script>
+    <link rel="stylesheet" href="theme.css">
     <link rel="stylesheet" href="qlash.css">
+    <script src="theme.js"></script>
 </head>
 <body>
     <div class="container">
@@ -156,7 +158,7 @@
     <div id="confetti-container"></div>
 
     <footer style="text-align: center; margin-top: 20px; font-size: 0.9em;">
-        <p><a href="datenschutz.html" style="color: black; text-decoration: none;">Datenschutzhinweise</a></p>
+        <p><a href="datenschutz.html" style="color: var(--link-color); text-decoration: none;">Datenschutzhinweise</a></p>
     </footer>
 
     <!-- Main Application Script -->
