[Refactor] Update join link display to use a short URL for easier sharing

--- a/qlash.html
+++ b/qlash.html
@@ -69,10 +69,10 @@
             </div>
 
             <div id="qr-container" class="hidden">
-                <h3>Diesen Link oder QR-Code teilen, damit Spieler beitreten kÃ¶nnen:</h3>
+                <h3>QR-Code scannen oder URL eingeben, um beizutreten:</h3>
                 <div id="qrcode" style="cursor: pointer;"></div>
-                <p>Beitrittslink: <a id="join-link" href="#" target="_blank"></a></p>
-                <p>Raum-Code: <span id="room-id"></span></p>
+                <p>URL eingeben: <a id="join-link" href="#" target="_blank"></a></p>
+                <p>Dann Code eingeben: <span id="room-id" style="font-size: 1.4em; font-weight: bold; letter-spacing: 0.1em;"></span></p>
                 <p>Verbundene Spieler: <span id="player-count">0</span></p>
                 <div class="players-list" id="players-list"></div>
                 <button id="start-questions-btn" class="btn btn-accent hidden">Fragen starten</button>
@@ -146,10 +146,10 @@
     <div id="qr-modal-overlay" class="qr-modal-overlay hidden">
         <div id="qr-modal-content" class="qr-modal-content">
             <button id="qr-modal-close" class="qr-modal-close">&times;</button>
-            <h3>Zum Beitreten scannen</h3>
+            <h3>Zum Beitreten scannen oder URL eingeben</h3>
             <div id="large-qrcode"></div>
-            <p>Beitrittslink: <a id="join-link-modal" href="#" target="_blank"></a></p>
-            <p>Raum-Code: <span id="modal-room-id"></span></p>
+            <p>URL eingeben: <a id="join-link-modal" href="#" target="_blank"></a></p>
+            <p>Dann Code eingeben: <span id="modal-room-id" style="font-size: 1.4em; font-weight: bold; letter-spacing: 0.1em;"></span></p>
         </div>
     </div>
 
