feat: add theme support with dark mode and toggle functionality
- Introduced theme.css and theme.js for shared styling and theme management.
- Updated HTML files to include theme.css and theme.js.
- Enhanced CSS with variables for light and dark modes.
- Modified existing styles to utilize new CSS variables for consistency.
- Implemented theme toggle button for user interaction.
- Updated service worker to cache new theme files.

--- a/cards.html
+++ b/cards.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     
     <title>Lernkarten App</title>
+    <link rel="stylesheet" href="theme.css">
+    <script src="theme.js"></script>
     <script src="sanitize.js"></script>
     <link rel="stylesheet" href="cards.css">
 </head>
