--- a/datenschutz.html
+++ b/datenschutz.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Datenschutz & Datenbank</title>
+  <link rel="stylesheet" href="theme.css">
+  <script src="theme.js"></script>
   <link rel="stylesheet" href="qlash.css">
 </head>
 <body>
